[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://_tri_char_codex/windows/MatchMenu.gd" type="Script" id=2]

[node name="PauseCodexMenu" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_right = 45.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_top = -54.0
margin_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 89.0
margin_bottom = 28.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 88.0
margin_bottom = 11.0
text = "Codex"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 88.0
margin_bottom = 15.0

[node name="Characters" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 15.0
margin_right = 88.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Characters"]
margin_right = 42.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cowboy"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/Characters"]
margin_left = 46.0
margin_right = 88.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ninja"

[node name="CodexLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 64
visible = false

[node name="CodexPanel" type="PanelContainer" parent="CodexLayer"]
unique_name_in_owner = true
anchor_bottom = 1.0
margin_top = 20.0
margin_right = 302.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CodexLayer/CodexPanel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 301.0
margin_bottom = 339.0

[node name="HBoxContainer" type="HBoxContainer" parent="CodexLayer/CodexPanel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 17.0
size_flags_vertical = 3

[node name="CodexCloseL" type="Button" parent="CodexLayer/CodexPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 17.0
rect_min_size = Vector2( 40, 0 )
size_flags_vertical = 3
text = "Close"

[node name="Label" type="Label" parent="CodexLayer/CodexPanel/VBoxContainer/HBoxContainer"]
margin_left = 135.0
margin_top = 3.0
margin_right = 165.0
margin_bottom = 14.0
size_flags_horizontal = 6
text = "Codex"

[node name="CodexCloseR" type="Button" parent="CodexLayer/CodexPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 260.0
margin_right = 300.0
margin_bottom = 17.0
rect_min_size = Vector2( 40, 0 )
size_flags_vertical = 3
text = "Close"

[node name="CodexContainer" type="MarginContainer" parent="CodexLayer/CodexPanel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 300.0
margin_bottom = 338.0
rect_min_size = Vector2( 300, 320 )
